 * Cisco access point (AP) configuration mistake in documentation
 * Dashboard not printing the SQL stats when MySQL is not local (#1289)
 * Doubled allow subnets in captive-portal-common (#1242)
 * Unreliable encoding behavior messes up with translations (#1287)
 * Nodes are not unregistered on unregdate unless an expire mode is activated (#1298)

--------------------------------------------------------------------------------
Version 3.0.1 released on 2011-09-23

Enhancements
 * Process IDs are now logged in the logs for pfcmd and pfcmd_vlan
 * We now strip all non-digits in telephone numbers during SMS activation
 * Improved validation of violation triggers

Bug Fixes
 * MySQL pf user not having execute privileges (#1282)
 * Error when doing nodeaccounting view all (#1280)
 * Error when using installer.pl on CentOS 6 (#1274)
 * Cannot confirm the PIN when using SMS self-registration (#1277)

--------------------------------------------------------------------------------
Version 3.0.0 released on 2011-09-21

Compatibility notice
 * BACKUP YOUR /usr/local/pf/ BEFORE UPGRADING. Several path changed with this
   release and an rpm upgrade will REMOVE your templates and remediation pages.
   See UPGRADE for more information.
 * We removed the central concept of mode (arp, dhcp or vlan). Now PacketFence
   can operate in multiple modes simultaneously. This new concept is called
   enforcement and is specified per interface in pf.conf.
 * Removed support for Apache prior to version 2.2.0 (#828)
 * Removed support for jpgraph 1.x, 2.x which bumps our depedencies to PHP 5.1

New Hardware Support
 * Avaya/Nortel switches now support the floating network device feature
 * Avaya Wireless Controller support
 * Dlink DWL Access-Point support
 * LG-Ericsson iPecs 4500 support for port-security and MAC Authentication/802.1X
 * Netgear FGS Series support for port-security 

New features
 * Major update to the captive portal look and feel! More modern and 