@@ -32,6 +32,7 @@ Bug Fixes
  * Doubled allow subnets in captive-portal-common (#1242)
  * Unreliable encoding behavior messes up with translations (#1287)
  * Nodes are not unregistered on unregdate unless an expire mode is activated (#1298)
+ * Add trigger or cascade to delete node_useragent when deleting a node (#1285)
 
 --------------------------------------------------------------------------------
 Version 3.0.1 released on 2011-09-23
